#1040 - major refactoring to support configuration of TariffEvaluationHelper instances